upload creat new html/bart.html

--- a/HTML/Project/admin/create_new.html
+++ b/HTML/Project/admin/create_new.html
@@ -1,4 +1,65 @@
 <!doctype html>
 <html>
-    
+    <head>
+        <title>Create poster</title>
+    </head>
+    <body>
+        <table>
+            <tr width="100%">
+                <td width="15%"></td>
+                <td width="70%">
+                    <a href="#">Back to Homepage</a>
+                    <br>
+                    <br>
+                    <form>
+                        <fieldset>
+                            <legend>Top Headline</legend>
+                            <p>Headline text:<input type="text" name="headline"></p>
+                        </fieldset>
+                        <br>
+                        <br>
+                        <fieldset>
+                            <legend>Images</legend>
+                            <p>Image 1:<input type="file" name="image"></p>
+                            <p>Image 2:<input type="file" name="image"></p>
+                            <p>Image 3:<input type="file" name="image"></p>
+                        </fieldset>
+                        <br>
+                        <br>
+                        <fieldset>
+                            <legend>Reward</legend>
+                            <p>Reward money:<input type="text" name="reward"></p>
+                        </fieldset>
+                        <fieldset>
+                            <legend>Reward</legend>
+                            <label>Aliases: <br><input type="text" name="aliases"></label><br><br>
+                            <label>Birth: <br><input type="number" name="birth"></label><br><br>
+                            <label>Heir: <br><input type="text" name="heir"></label><br><br>
+                            <label>Eyes: <br><input type="text" name="eyes"></label><br><br>
+                            <label>Height: <br><input type="number" name="height"></label><br><br>
+                            <label>Weight: <br><input type="number" name="weight"></label><br><br>
+                            <label>Sex: <br><input type="text" name="sex"></label><br><br>
+                            <label>ID Number: <br><input type="number" name="id-number"></label><br><br>
+                            <label>Occupation: <br><input type="text" name="occupation"></label>
+                        </fieldset>
+                        <br>
+                        <fieldset>
+                            <legend>Remarks</legend>
+                            <textarea name="remarks" cols="260" rows="10" placeholder="Remarks text"></textarea>
+                        </fieldset>
+                        <br>
+                        <br>
+                        <fieldset>
+                            <legend>Caution</legend>
+                            <textarea name="caution" cols="260" rows="10" placeholder="Caution text"></textarea>
+                        </fieldset>
+                        <br>
+                        <br>
+                        <button type="reset">Reset</button><button type="submit">Create poster</button>
+                    </form>
+                </td>
+                <td width="15%"></td>
+            </tr>
+        </table>
+    </body>
 </html>
