--- a/HTML/Project/posters/bart.html
+++ b/HTML/Project/posters/bart.html
@@ -4,25 +4,29 @@
         <title>Bart</title>
     </head>
     <body>
-        <table width="100%">
-            <tr width="100%">
-                <td width="100%">
-                    <img src="../images/wanted.png" width="100%">
-                </td>
-            </tr>
-            <br>
-            <tr width="100%">
-               <td width="100%"><p>FOR QUESTIONING IN CONNECTION WITH THE SHOTING OF MONTGOMERY BURNS</p></td>
-               <td>
-                   <img src="../images/bart/bart.gif" height="260px">
-               </td>
-               <td>
-                   <img src="../images/bart/bart2.gif" height="260px">
-               </td>
-               <td>
-                   <img src="../images/bart/bart3.jpg" height="260px">
-               </td>
+        <table width ="100%">
+            <tr>
+                <td></td>
+                <td width="960px"><table border="2" width="100%">
+                        <tr>
+                            <td colspan="3">
+                                <img src="../images/wanted.png" width="100%">
+                                <p>FOR QUESTIONING IN CONNECTION WITH THE SHOTING OF MONTGOMERY BURNS</p>
+                            </td>
+                        </tr>
+                        <tr>
+                           <td></td>
+                           <td>
+                                <img src="../images/bart/bart.gif" height="260px">
+                               <img src="../images/bart/bart2.gif" height="260px">
+                               <img src="../images/bart/bart3.jpg" height="260px">
+                            </td>
+                           <td></td>
+                        </tr>
+                    </table></td>
+                <td></td>
             </tr>
         </table>
+        
     </body>
 </html>
